fix spacing in menu on mobile

--- a/resources/assets/css/components/issue.less
+++ b/resources/assets/css/components/issue.less
@@ -178,7 +178,6 @@
 .issue-form,
 .comment-form {
   margin-bottom: @menu_padding;
-  padding-bottom: .5em;
 }
 .issue-name-input {
   outline: none;
